--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Image Proxy</title>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
